gl31-master/src/test/deca/context/invalid/complet/stringTest.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 14 : Pas possible d'utiliser des strings
//
// Historique:
//    cree le 19/01/2021

class A{
    int a(string a){}
    }